add unit test and small revision of main
add `CollaboratorKey` for the sake of robustness; add unit test